tests/errors/select_case_requires_a_channel.b
fn main() {
    x := 5;

    select {
        case v := x.recv() {
        }
    }
}
